<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/navigation_login">

    <fragment
        android:id="@+id/navigation_login"
        android:name="com.anirudha.signupin_retrofit_api.sign_in_up.SignInFragment"
        android:label="@string/signInBtn"
        tools:layout="@layout/fragment_sign_in">

        <action
            android:id="@+id/action_loginFragment_to_registrationFragment"
            app:destination="@id/navigation_registration" />

        <action
            android:id="@+id/action_loginFragment_to_homeFragment"
            app:destination="@id/navigation_home" />
    </fragment>

    <fragment
        android:id="@+id/navigation_registration"
        android:name="com.anirudha.signupin_retrofit_api.sign_in_up.SignUpFragment"
        android:label="@string/signUpBtn"
        tools:layout="@layout/fragment_sign_up">

        <action
            android:id="@+id/action_registrationFragment_to_loginFragment"
            app:destination="@id/navigation_login" />
    </fragment>


    <fragment
        android:id="@+id/navigation_home"
        android:name="com.anirudha.signupin_retrofit_api.sign_in_up.HomeFragment"
        android:label="@string/homeTxt"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_homeFragment_to_loginFragment"
            app:destination="@id/navigation_login" />
    </fragment>

</navigation>