<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".sign_in_up.SignUpFragment">


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/uNameTextLayoutRegistration"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:hint="@string/userName"
        android:textColor="@color/colorFont"
        android:textColorHint="@color/colorFont"
        app:counterEnabled="true"
        app:counterMaxLength="10"
        app:counterTextColor="@color/colorAccent"
        app:helperTextTextColor="@color/colorFont">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/uNameTextRegistration"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_person_identity_16dp"
            android:ems="0"
            android:imeOptions="actionNext"
            android:inputType="text"
            android:maxLength="10"
            android:maxLines="1"
            android:singleLine="true"
            android:textColor="@color/colorFont"
            tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordTextLayoutRegistration"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/uNameTextLayoutRegistration"
        android:hint="@string/passwd"
        android:textColor="@color/colorFont"
        android:textColorHint="@color/colorFont"
        app:counterEnabled="true"
        app:counterMaxLength="10"
        app:counterTextColor="@color/colorAccent"
        app:helperTextTextColor="@color/colorFont">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/passwordTextRegistration"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_shield"
            android:ems="0"
            android:inputType="textPassword"
            android:maxLength="10"
            android:maxLines="1"
            android:singleLine="true"
            android:textColor="@color/colorFont"
            tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/submitBtnRegistration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="161dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="161dp"
        android:enabled="true"
        android:text="@string/signUpBtn"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordTextLayoutRegistration" />


</androidx.constraintlayout.widget.ConstraintLayout>